<resources>
    <string name="app_name">Employee Portal</string>
    <string name="employee_list_Screen">Employee List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="employee_name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="employee_email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_new">Add New</string>
    <string name="roles">Roles</string>
    <string name="settings_customize_dialog">Roles</string>
    <string name="first_name_required">First name required</string>
    <string name="last_name_required">Last name required</string>
    <string name="email_required">Valid email address required</string>
    <string name="valid_username_required">Valid Username required</string>
    <string name="password_not_match">Password not match</string>
</resources>